# safariAppBackend

./: .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.test  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint_test.sh  manage.py  mydatabase  nginx.conf  pyproject.toml
accounts/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_email.py  0003_user_profile_image.py  0004_favorites.py
accounts/tests/: __init__.py  test_account_urls_.py  test_account_views.py  test_user_fav.py  test_user_model.py
safari/: admin.py  apps.py  documents.py  models.py  paginations.py  serializers.py  urls.py  views.py
safari/migrations/: 0001_initial.py  0002_alter_safari_options.py  0003_safariratings_safari_ratings.py
safari/tests/: __init__.py  test_safari_all.py  test_safari_create.py  test_safari_urls.py
safariBackend/: asgi.py  celery.py  serializers.py  settings.py  urls.py  wsgi.py
safariBackend/locale/en_TR/LC_MESSAGES/: django.po
safariBackend/settings/: base.py  dev.py  docker.py  prod.py  production.py  test.py
scraper/: apps.py  tasks.py  urls.py  utils.py  views.py
