[tool.poetry]
name = "safaribackend"
version = "0.1.0"
description = "A restApi project which follows best practices"
authors = ["Can İlgu <canilguu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.5"
Django = "^4.1.7"
django-debug-toolbar = "^3.8.1"
python-decouple = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
